@@ -1,5 +1,15 @@
 2021-06-04  Chris Dumez  <cdumez@apple.com>
 
+        DOMFileSystem::listDirectory() fails to protect |this| when going to the background thread
+        https://bugs.webkit.org/show_bug.cgi?id=226652
+
+        Reviewed by Darin Adler.
+
+        * Modules/entriesapi/DOMFileSystem.cpp:
+        (WebCore::DOMFileSystem::listDirectory):
+
+2021-06-04  Chris Dumez  <cdumez@apple.com>
+
         Stop using legacy MainThreadTaskQueue in Document::didLogMessage()
         https://bugs.webkit.org/show_bug.cgi?id=226645
 
